# acapy-wallet-groups-plugin

./: Dockerfile  LICENSE.md  README.md  makefile  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: continuous-integration.yml  publish-release.yml
acapy_wallet_groups_plugin/: __init__.py  routes.py
acapy_wallet_groups_plugin/v1_0/: __init__.py  routes.py
config/: defaults.yml  plugin.yml
tests/: test_routes.py
yoma_wallet_groups_plugin/: __init__.py  routes.py
