[tool.poetry]
name = "acapy_wallet_groups_plugin"
version = "1.0.0b0"
description = "Agent plugin to add a group id to a wallet"
authors = ["Berend Sliedrecht <berend@animo.id>"]
packages = [{ include = "acapy_wallet_groups_plugin" }]

[tool.poetry.dependencies]
python = ">=3.12.0,<4.0.0"
aries-cloudagent = { git = "https://github.com/didx-xyz/aries-cloudagent-python.git", tag = "1.0.0b0" }
indy-vdr = "~0.4.0"
indy-credx = "~1.1.1"
anoncreds = { version = "0.2.0", allow-prereleases = true }
aiohttp = "^3.9.4"
marshmallow = "^3.20.2"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
aries-askar = "~0.3.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
