[tool.poetry]
name = "acapy_wallet_groups_plugin"
version = "1.2.1-20250306"
description = "Agent plugin to add a group id to a wallet"
authors = ["Berend Sliedrecht <berend@animo.id>", "Mourits de Beer <ff137@proton.me>"]
packages = [{ include = "acapy_wallet_groups_plugin" }]
repository = "https://github.com/didx-xyz/acapy-wallet-groups-plugin"

[tool.poetry.dependencies]
python = ">=3.12.0,<4.0.0"
acapy-agent-didx = { version = "1.2.1-20250306", source = "testpypi" }
# acapy-agent-didx = { git = "https://github.com/didx-xyz/acapy.git", branch = "release-1.2.1-20250306" }
indy-vdr = "~0.4.0"
indy-credx = "~1.1.1"
anoncreds = { version = "0.2.0", allow-prereleases = true }
aiohttp = "^3.9.4"
marshmallow = "^3.20.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
aries-askar = ">=0.4.2"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"
