[tool.poetry]
name = "acapy_wallet_groups_plugin"
version = "1.3.1-20250702"
description = "Agent plugin to add a group id to a wallet"
authors = ["Berend Sliedrecht <berend@animo.id>", "Mourits de Beer <ff137@proton.me>"]
packages = [{ include = "acapy_wallet_groups_plugin" }]
repository = "https://github.com/didx-xyz/acapy-wallet-groups-plugin"

[tool.poetry.dependencies]
python = "^3.12.0"
acapy-agent-didx = { version = ">=1.3.1.post20250702", source = "testpypi" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=2.1"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"
